<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
    <item android:id="@+id/action_drag_add"
        android:icon="@drawable/add"
        android:title="@string/action_drag_add"
        app:showAsAction="always"
        />
    <item android:id="@+id/action_drag_shape"
        android:icon="@drawable/circle"
        android:title="@string/action_drag_shape"
        app:showAsAction="always">
        <menu>
            <group>
                <item
                    android:id="@+id/action_drag_shape_circle"
                    android:title="@string/action_drag_shape_circle"
                    android:icon="@drawable/circle"
                    app:showAsAction="ifRoom"
                    />
                <item
                    android:id="@+id/action_drag_shape_star"
                    android:title="@string/action_drag_shape_star"
                    android:icon="@drawable/star"
                    app:showAsAction="ifRoom"
                    />
                <item
                    android:id="@+id/action_drag_shape_heart"
                    android:title="@string/action_drag_shape_heart"
                    android:icon="@drawable/heart"
                    app:showAsAction="ifRoom"
                    />
            </group>
        </menu>
    </item>
    <item
        android:id="@+id/action_drag_more"
        android:icon="@drawable/abc_ic_menu_moreoverflow_mtrl_alpha"
        android:title="@string/action_drag_more"
        app:showAsAction="always">
        <menu>
            <group>
                <item android:id="@+id/action_drag_complete"
                android:icon="@drawable/complete"
                android:title="@string/action_drag_complete"
                app:showAsAction="collapseActionView"/>
                <item android:id="@+id/action_drag_remove"
                    android:icon="@drawable/remove"
                    android:title="@string/action_drag_remove"
                    app:showAsAction="collapseActionView"
                    />
                <item android:id="@+id/action_drag_rename"
                    android:icon="@drawable/rename"
                    android:title="@string/action_drag_rename"
                    app:showAsAction="ifRoom|collapseActionView"/>
            </group>
        </menu>
    </item>
</menu>
